# twenty-fourty-eight

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  dune-project  flake.nix  image.nix  twenty_fourty_eight  twenty_fourty_eight.opam
_build/: log
lib/: dune  templates.ml  templates.mli  twenty_fourty_eight.ml  twenty_fourty_eight.mli  types.ml
test/: dune  test_twenty_fourty_eight.ml
